fix progress bar jump

--- a/x-pack/legacy/plugins/ml/public/data_frame/pages/transform_management/components/transform_list/_transform_table.scss
+++ b/x-pack/legacy/plugins/ml/public/data_frame/pages/transform_management/components/transform_list/_transform_table.scss
@@ -19,5 +19,5 @@
 }
 
 .mlTaskStateBadge, .mlTaskModeBadge {
-  width: 100px;
+  max-width: 100px;
 }
